<resources>
    <string name="app_name">Days of my life</string>
    <string name="tab_my_data">MY DATA</string>
    <string name="tab_outlived">OUTLIVED</string>
    <string name="tab_social">SOCIAL</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="person_selector_title">Show data for</string>
    <string name="birthday_label">Birthday</string>
    <string name="alive_for_title">You are alive</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="next_to_outlive">Next to outlive</string>
    <string name="zero">0</string>
    <string name="default_date">01.01.2000</string>
    <string name="data_retrieval_failed">Failed to retrieve data. Please try again later.</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="cannot_be_empty">Name cannot be empty.</string>
    <string name="select_birthday">Select birthday</string>
    <string name="outlived_by">Outlived by %d days</string>
    <string name="days_more">%d days more</string>
    <string name="big_number_formatter">%,d</string>
    <string name="data_not_avaulable">Data not available.</string>
    <string name="close">Close</string>
    <string name="no_additional_data_available">No additional data available.</string>
    <string name="share">Share</string>
    <string name="share_image">Share image</string>
    <string name="doml_quote_of_the_day">Quote of the day</string>
    <string name="widget_title">It\'s your %s day on earth</string>
    <string name="widget_title_empty">It\'s your 0th day on earth</string>
    <string name="advertising">Advertising</string>
    <string name="arithmetic_too_big">Number is too big!</string>
    <string name="add_widget">Add widget</string>
    <string name="outlived_today">Outlived today!</string>
    <string name="content_description">Content description</string>
    <string name="set_your_birthday">Set your birthday</string>
    <string name="notification_change">Notifications successfully %s</string>
    <string name="admob_interstitial_ad_unit_id">ca-app-pub-9883575696396484/4456643893</string>
    <string name="admob_app_unit_id">ca-app-pub-9883575696396484/4456643893</string>

</resources>
