<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout android:id="@+id/input_name"
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="1000dp"
            android:minHeight="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="100">
            <TextView
                    android:text="@string/name"
                    style="@style/SubtitleView"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
            <EditText
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    style="@style/SubtitleViewBlack"
                    android:hint="@string/nickname"
                    android:ems="10"
                    android:id="@+id/person_name"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="2">
            <Button
                    android:text="@android:string/cancel"
                    android:layout_weight="1"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/cancel"  tools:ignore="ButtonStyle"/>
            <Button
                    android:text="@string/add"
                    android:background="@null"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/add" tools:ignore="ButtonStyle"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>