<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/lighterGray" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent">


    <android.support.v7.widget.CardView
            android:id="@+id/share_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardCornerRadius="5dp" app:layout_constraintTop_toTopOf="parent">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        style="@style/TitleView"
                        android:text="@string/doml_quote_of_the_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView12"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="100">
                <ImageView
                        android:contentDescription="@string/content_description"
                        android:adjustViewBounds="true"
                        android:layout_weight="100"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/avatar"
                        android:id="@+id/shareImage"
                        android:padding="10dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="100">
                <Button
                        android:layout_weight="100"
                        android:text="@string/share_image"
                        android:background="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button"
                        tools:layout_editor_absoluteY="384dp" tools:layout_editor_absoluteX="148dp"/>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/share_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            cardCornerRadius="5dp"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="100">
                <TextView
                        android:layout_weight="100"

                        style="@style/TitleView"
                        android:text="@string/advertising"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tvAdTitle"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:paddingBottom="15sp">
                <com.google.android.gms.ads.AdView
                        android:layout_weight="100"
                        android:layout_gravity="center"
                        xmlns:ads="http://schemas.android.com/apk/res-auto"
                        ads:adSize="BANNER"
                        ads:adUnitId="ca-app-pub-9883575696396484/9750412148"
                        android:id="@+id/adViewSocial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>