<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:background="@color/lighterGray" android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <android.support.v7.widget.CardView
            android:id="@+id/card_view_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            cardCornerRadius="5dp">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/person_selector_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        style="@style/TitleView"/>
                <Spinner
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/person_spinner"
                />
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/birthday_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView2"
                        style="@style/SubtitleView"/>
                <ImageButton
                        android:layout_gravity="end"
                        android:background="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/calendar_icon"
                        android:id="@+id/imageButton"/>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/card_view_birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardCornerRadius="5dp">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/alive_for_title"
                        style="@style/TitleView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView4"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Seconds"
                        style="@style/SubtitleView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView5"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Minutes"
                        style="@style/SubtitleView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView6"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Hours"
                        style="@style/SubtitleView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView7"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Days"
                        style="@style/SubtitleView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView8"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Months"
                        style="@style/SubtitleView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView9"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Years"
                        style="@style/SubtitleView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView10"/>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>